# OtelMind

./: .env.example  .gitignore  .railwayignore  .vercelignore  DEPLOY.md  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
agent/: graph.py  requirements.txt  run.py  telemetry.py
config/: fallback_tools.yaml  remediation.yaml
config/eval_datasets/: README.md  golden.yaml  group_scenarios.yaml  human_labels.yaml
config/eval_datasets/benchmark_results/: SUMMARY.md  api-integration-webhook-retry_consensus.json  api-integration-webhook-retry_debate.json  api-integration-webhook-retry_round_robin.json  code-review-auth-middleware_consensus.json  code-review-auth-middleware_debate.json  code-review-auth-middleware_round_robin.json  data-analysis-churn_consensus.json  data-analysis-churn_debate.json  data-analysis-churn_round_robin.json  debug-python-bug_consensus.json  debug-python-bug_debate.json  debug-python-bug_round_robin.json  debug-race-condition_consensus.json  debug-race-condition_debate.json  debug-race-condition_round_robin.json  design-api-schema_consensus.json  design-api-schema_debate.json  design-api-schema_round_robin.json  performance-optimization-nplusone_consensus.json  performance-optimization-nplusone_debate.json  performance-optimization-nplusone_round_robin.json  security-audit-file-upload_consensus.json  security-audit-file-upload_debate.json  security-audit-file-upload_round_robin.json  system-architecture-rate-limiter_consensus.json  system-architecture-rate-limiter_debate.json  system-architecture-rate-limiter_round_robin.json  technical-writing-runbook_consensus.json  technical-writing-runbook_debate.json  technical-writing-runbook_round_robin.json
config/grafana/: datasource.yml
dashboard/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/hooks/: use-traces.ts
docs/: LOAD_TEST.md
mcp_server/: .gitignore  README.md  pyproject.toml  server.py
mcp_server/tools/: calibration.py  classifier.py  eval_runner.py  hallucination.py  multiagent.py  protocol_selector.py  trace_summary.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_multitenancy_auth_alerts.py  003_partitioning_rbac.py  004_eval_runs.py  005_remediation_soft_fk.py  006_trace_scores.py  007_multiagent_calibration.py
otelmind/: __init__.py  config.py  db.py  internal_tracing.py  main.py
otelmind/alerting/: alert_router.py
otelmind/api/: __main__.py  auth.py  calibration_routes.py  main.py  middleware.py  multiagent_routes.py  rate_limit.py  rbac_routes.py  routes.py  schemas.py
otelmind/cli/: __init__.py  bootstrap_tenant.py
otelmind/collector/: __main__.py  collector.py  processor.py  queue.py  server.py  span_processor.py  writer.py
otelmind/cost/: pricing.py  service.py
otelmind/eval/: batch_scorer.py  benchmark.py  calibration.py  gate.py  group_metrics.py  judge.py  meta_eval.py  protocol_selector.py  regression.py  statistics.py  worker.py
otelmind/instrumentation/: __init__.py  instrumentor.py  langgraph_instrumentor.py  tracer.py
otelmind/multiagent/: __init__.py  group.py  protocols.py  roles.py  tracer.py
otelmind/remediation/: base.py  escalate.py  remediation_engine.py  retry.py  swap_tool.py
otelmind/storage/: models.py  partitioning.py  telemetry_service.py
otelmind/watchdog/: __main__.py  failure_detection.py  heuristics.py  llm_judge.py  watchdog_agent.py
scripts/: deploy_koyeb.sh  import_benchmark_results.py  load_test.py  run_benchmarks.py  run_single_agent_baseline.py  smoke_multiagent.py  summarize_benchmarks.py
sdk-js/: README.md  package.json  tsconfig.json  tsup.config.ts
sdk-js/src/: client.ts  index.ts  span-queue.ts  tracer.ts  types.ts
tests/: conftest.py
tests/integration/: _api_helpers.py  test_api.py  test_api_endpoints.py  test_calibration_api.py  test_e2e_pipeline.py  test_eval_worker.py  test_mcp_transport.py  test_multiagent_api.py  test_multiagent_live.py
tests/unit/: test_batch_scorer.py  test_batch_writer.py  test_calibration.py  test_cost_spike.py  test_eval_benchmark.py  test_eval_judge.py  test_eval_regression.py  test_failure_detection.py  test_group_metrics.py  test_human_labels_dataset.py  test_instrumentation.py  test_internal_tracing.py  test_llm_judge_unit.py  test_mcp_tools.py  test_meta_eval.py  test_multiagent_budget.py  test_multiagent_group.py  test_multiagent_protocols.py  test_prompt_injection.py  test_protocol_selector.py  test_remediation.py  test_schemas.py  test_semantic_drift.py  test_statistics.py
(+32 files in other folders)
