[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otelmind-mcp"
version = "0.2.0"
description = "MCP server: AI-agent failure detection, multi-agent group eval, and judge calibration as Claude tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Syed Shabeeb Nibras" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "anthropic",
    "opentelemetry",
    "langgraph",
    "ai",
    "observability",
    "evaluation",
    "llm-judge",
    "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
# The advanced tools — calibrate_judge, run_multiagent_eval, recommend_protocol —
# wrap modules that live in the parent `otelmind` package and import lazily
# at call time. Install this extra to enable them.
full = ["otelmind>=0.1.0", "anthropic>=0.39.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/syedshabeebnibras/OtelMind"
Repository = "https://github.com/syedshabeebnibras/OtelMind"
Issues = "https://github.com/syedshabeebnibras/OtelMind/issues"

[project.scripts]
otelmind-mcp = "server:main"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = [
    "server.py",
    "tools/__init__.py",
    "tools/classifier.py",
    "tools/hallucination.py",
    "tools/eval_runner.py",
    "tools/trace_summary.py",
    "tools/calibration.py",
    "tools/multiagent.py",
    "tools/protocol_selector.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "tools/",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "uv.lock",
]
